--- a/package.json
+++ b/package.json
@@ -56,7 +56,21 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "husky": "4",
+    "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "typesync": "^0.8.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "prettier --write --loglevel=warn",
+      "eslint --fix",
+      "eslint  --max-warnings=0"
+    ]
   }
 }
