--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-paginate": "^7.1.1",
+    "classnames": "^2.3.1",
     "graphql": "^15.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,6 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:tailwind": "tailwind build src/styles/index.css -o src/styles/dist/tailwind.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -50,6 +52,7 @@
     "@types/testing-library__jest-dom": "^5.14.1",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
+    "autoprefixer": "^10.3.5",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
@@ -58,7 +61,9 @@
     "eslint-plugin-react": "^7.24.0",
     "husky": "4",
     "lint-staged": "^11.1.2",
+    "postcss": "^8.3.8",
     "prettier": "^2.3.2",
+    "tailwindcss": "^2.2.15",
     "typesync": "^0.8.0"
   },
   "husky": {
