--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-paginate": "^7.1.1",
+    "bootstrap": "4.1.0",
     "classnames": "^2.3.1",
     "graphql": "^15.6.0",
     "react": "^17.0.2",
