--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pagination",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -62,23 +62,9 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "^7.24.0",
-    "husky": "4",
-    "lint-staged": "^11.1.2",
     "postcss": "^8.3.8",
     "prettier": "^2.3.2",
     "tailwindcss": "^2.2.15",
     "typesync": "^0.8.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "prettier --write --loglevel=warn",
-      "eslint --fix",
-      "eslint  --max-warnings=0"
-    ]
   }
 }
