--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,21 +50,10 @@
     ]
   },
   "devDependencies": {
-    "@types/eslint-plugin-prettier": "^3.1.0",
-    "@types/prettier": "^2.3.2",
     "@types/testing-library__jest-dom": "^5.14.1",
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
     "autoprefixer": "^10.3.5",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "postcss": "^8.3.8",
-    "prettier": "^2.3.2",
-    "tailwindcss": "^2.2.15",
-    "typesync": "^0.8.0"
+    "tailwindcss": "^2.2.15"
   }
 }
