--- a/package.json
+++ b/package.json
@@ -17,8 +17,19 @@
     "sr:start": "yarn workspace server start"
   },
   "devDependencies": {
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/prettier": "^2.3.2",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "3.4.0",
     "husky": "4",
-    "lint-staged": "^11.1.2"
+    "lint-staged": "^11.1.2",
+    "prettier": "^2.3.2",
+    "typesync": "^0.8.0"
   },
   "husky": {
     "hooks": {
