--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "4.1.0",
     "classnames": "^2.3.1",
     "graphql": "^15.6.0",
+    "rc-pagination": "^3.1.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-paginate": "^7.1.3",
